# IN3110-oliverif

./: .gitignore  README.md
assignment1/: friendly_greeting.txt  gitconflict.txt  myfirstcommit.txt
assignment2/: README.md  array_class.py  notebook.ipynb  test_array.py
assignment3/: README.md  notebook.ipynb  profile-report.md  pyproject.toml  setup.py  timing-report.txt
assignment3/instapy/: cli.py  cython_filters.c  cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  requires.txt
assignment3/test/: conftest.py  test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  collect_dates.py  fetch_player_statistics.py  filter_urls.py  http_cache.sqlite  notebook.ipynb  out.txt  out2.txt  out3.txt  out_test.txt  output.txt  requesting_urls.py  time_planner.py  wiki.txt
assignment4/tests/: test_collect_dates.py  test_filter_urls.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py  tester.ipynb
assignment5/templates/: strompris.html
assignment5/tests/: test_app.py
my-repo-copy/: less_friendly_greeting.txt
